# AOC2024

./: .gitignore  CMakeLists.txt  vcpkg.json
day01/: day01.cpp  day01.hpp
day02/: day02.cpp  day02.hpp
day03/: day03.cpp  day03.hpp
day04/: day04.cpp  day04.hpp
day05/: day05.cpp  day05.hpp
day06/: day06.cpp  day06.hpp
day07/: day07.cpp  day07.hpp
day08/: day08.cpp  day08.hpp
day09/: day09.cpp  day09.hpp
day10/: day10.cpp  day10.hpp
day11/: day11.cpp  day11.hpp
day12/: day12.cpp  day12.hpp
day13/: day13.cpp  day13.hpp
day14/: day14.cpp  day14.hpp
